New View for the Musicians App

--- a/MusicNetBand/Main_iPad.storyboard
+++ b/MusicNetBand/Main_iPad.storyboard
@@ -164,11 +164,26 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="46f-sV-RiR">
+                                <rect key="frame" x="741" y="26" width="10" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="IowanOldStyle-Roman" family="Iowan Old Style" pointSize="13"/>
+                                <color key="textColor" red="0.25717724126524555" green="0.73452859058387099" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Musician" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mTT-Sc-LmC">
+                                <rect key="frame" x="686" y="26" width="56" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="IowanOldStyle-Roman" family="Iowan Old Style" pointSize="13"/>
+                                <color key="textColor" red="0.25717724130000003" green="0.73452859059999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="cellLabel" destination="OAp-El-I6S" id="hjq-2A-xE7"/>
+                        <outlet property="musicianIdentifierLabel" destination="46f-sV-RiR" id="8zq-Jy-yo2"/>
                         <outlet property="nextCellIndicator" destination="Z5H-C2-sBi" id="S4a-EB-Sxw"/>
                         <outlet property="questionIndicator" destination="7P2-fp-ztX" id="1oH-ut-Qfx"/>
                         <outlet property="voteLabel" destination="S6i-wz-njP" id="slg-US-xfz"/>
